--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#FF3F80</color>
+    <color name="colorPrimaryLight">#CFD8DC</color>
+
+    <color name="colorPrimaryText">#FFFFFF</color>
+    <color name="colorSecondaryText">#FFFFFF</color>
+    <color name="colorDisabledText">#FFFFFF</color>
+    <color name="colorIcons">#FFFFFF</color>
+
+    <color name="colorDivider">#BDBDBD</color>
+    <color name="colorBackground">#303030</color>
+    <color name="colorCards">#424242</color>
 </resources>
