--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -7,7 +7,7 @@
     tools:context=".viewcontrollers.activities.OnboardingActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/gamesRecyclerView"
+        android:id="@+id/gamesRecyclerViewLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
