--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,12 +8,16 @@
 
     <item
         android:id="@+id/navigation_sources"
-        android:icon="@drawable/ic_outline_location_on_24px"
-        android:title="@string/map" />
+        android:title="@string/map"
+        android:icon="@drawable/ic_outline_location_on_24px"/>
+
+    <item
+        android:id="@+id/navigation_ranking"
+        android:icon="@drawable/ic_outline_star_border_24px"
+        android:title="@string/rank"/>
 
     <item
         android:id="@+id/navigation_favorites"
         android:icon="@drawable/ic_outline_mail_24px"
         android:title="@string/chat"/>
-
 </menu>
