--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#1C2938</color>
-    <color name="colorPrimaryDark">#1c2938</color>
-    <color name="colorAccent">#0084b4</color>
+    <color name="colorPrimaryDark">#1C2938</color>
+    <color name="colorAccent">#0084B4</color>
     <color name="colorPrimaryLight">#CFD8DC</color>
 
-    <color name="colorPrimaryText">#ffffff</color>
-    <color name="colorSecondaryText">#0084b4</color>
-    <color name="colorDisabledText">#8899a6</color>
-    <color name="colorIcons">#0084b4</color>
+    <color name="colorPrimaryText">#FFFFFF</color>
+    <color name="colorSecondaryText">#0084B4</color>
+    <color name="colorDisabledText">#8899A6</color>
+    <color name="colorIcons">#0084B4</color>
 
-    <color name="colorDivider">#38444d</color>
-    <color name="colorBackground">#15202b</color>
+    <color name="colorDivider">#38444D</color>
+    <color name="colorBackground">#15202B</color>
     <color name="colorCards">#101922</color>
 
 
