--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,6 @@
         <item name="android:background">@color/colorBackground</item>
         <item name="android:textColorPrimary">@color/colorPrimaryText</item>
         <item name="android:textColor">@color/colorPrimaryText</item>
-        <item name="android:colorBackground">@color/colorBackground</item>
 
     </style>
 
@@ -17,8 +16,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:colorBackground">@color/colorBackground</item>
+    </style>
 
 </resources>
