reconstruction of card views home

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
     <color name="colorDivider">#38444D</color>
     <color name="colorBackground">#15202B</color>
-    <color name="colorCards">#101922</color>
+    <color name="colorCards">#2e4359</color>
 
 
 </resources>
