--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/gameLayout"
@@ -14,27 +14,27 @@
 
         <com.androidnetworking.widget.ANImageView
             android:id="@+id/pictureImageView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:scaleType="centerCrop"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
-
-        <android.support.v7.widget.AppCompatRatingBar
-            android:id="@+id/gameRatingBar"
-            style="?android:attr/ratingBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginStart="16dp"
-            android:numStars="5"
-            android:stepSize=".5"
-            app:layout_constraintBottom_toBottomOf="@id/pictureImageView"
-            app:layout_constraintStart_toStartOf="parent" />
+        <!--<android.support.v7.widget.AppCompatRatingBar-->
+        <!--android:id="@+id/gameRatingBar"-->
+        <!--style="?android:attr/ratingBarStyleSmall"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:layout_marginBottom="4dp"-->
+        <!--android:layout_marginStart="16dp"-->
+        <!--android:numStars="5"-->
+        <!--android:stepSize=".5"-->
+        <!--app:layout_constraintBottom_toBottomOf="@id/pictureImageView"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
 
     </android.support.constraint.ConstraintLayout>
 
-</android.support.design.card.MaterialCardView>
+</android.support.v7.widget.CardView>
