--- a/app/src/main/res/layout/item_publication.xml
+++ b/app/src/main/res/layout/item_publication.xml
@@ -1,85 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginStart="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:elevation="32dp"
     android:theme="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-    android:elevation="32dp">
+    app:cardBackgroundColor="@color/colorAccent"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    >
 
-
-    <com.androidnetworking.widget.ANImageView
-        android:id="@+id/avatarImagePublication"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:padding="4dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/ic_round_perm_identity_24px"/>
-
-    <TextView
-        android:id="@+id/titleTextViewPublication"
-        android:layout_width="0dp"
-        android:layout_height="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="12dp"
-        android:text="Mock Title text"
-        android:textColor="@color/colorPrimaryText"
-        app:layout_constraintBottom_toTopOf="@+id/usernameTextViewPublication"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/avatarImagePublication"
-        app:layout_constraintTop_toTopOf="@id/avatarImagePublication" />
-
-    <TextView
-        android:id="@+id/usernameTextViewPublication"
-        android:layout_width="0dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="4dp"
-        app:layout_constraintStart_toEndOf="@id/avatarImagePublication"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/avatarImagePublication"
-        android:text="Username Mock text"
-        android:textColor="@color/colorDisabledText"
-        />
-
-    <com.androidnetworking.widget.ANImageView
-        android:id="@+id/descriptionImageViewPublication"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="12dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_round_perm_identity_24px"
-        app:layout_constraintDimensionRatio="H,16:9"
-        app:layout_constraintTop_toBottomOf="@id/avatarImagePublication"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/descriptionTextViewPublication"/>
-
-    <TextView
-        android:id="@+id/descriptionTextViewPublication"
-        android:layout_width="0dp"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:lineSpacingExtra="8dp"
-        android:textColor="@color/colorPrimaryText"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/descriptionImageViewPublication" />
+        android:background="@color/colorCards">
 
-</android.support.constraint.ConstraintLayout>
+
+        <com.androidnetworking.widget.ANImageView
+            android:id="@+id/avatarImagePublication"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorCards"
+            android:elevation="3dp"
+            android:padding="4dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:srcCompat="@drawable/ic_round_perm_identity_24px" />
+
+        <TextView
+            android:id="@+id/titleTextViewPublication"
+            android:layout_width="0dp"
+            android:layout_height="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:background="@color/colorCards"
+            android:text="Mock Title text"
+            android:textColor="@color/colorPrimaryText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/avatarImagePublication"
+            app:layout_constraintTop_toTopOf="@+id/avatarImagePublication" />
+
+        <TextView
+            android:id="@+id/usernameTextViewPublication"
+            android:layout_width="0dp"
+            android:layout_height="16dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:background="@color/colorCards"
+            android:text="Username Mock text"
+            android:textColor="@color/colorDisabledText"
+            app:layout_constraintBottom_toBottomOf="@id/avatarImagePublication"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/avatarImagePublication"
+            app:layout_constraintTop_toBottomOf="@+id/titleTextViewPublication" />
+
+        <com.androidnetworking.widget.ANImageView
+            android:id="@+id/descriptionImageViewPublication"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="8dp"
+            android:background="@color/colorCards"
+            android:elevation="8dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_round_perm_identity_24px"
+            app:layout_constraintBottom_toTopOf="@id/descriptionTextViewPublication"
+            app:layout_constraintDimensionRatio="H,16:9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/avatarImagePublication" />
+
+        <TextView
+            android:id="@+id/descriptionTextViewPublication"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorCards"
+            android:lineSpacingExtra="8dp"
+            android:textColor="@color/colorPrimaryText"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/descriptionImageViewPublication" />
+
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
