--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,12 @@
         <item name="android:colorBackground">@color/colorBackground</item>
     </style>
 
+    <style name="FacebookLoginButton">
+        <item name="android:textSize">16dp</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
 </resources>
