--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,22 +5,11 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".viewcontrollers.activities.LoginActivity">
+tools:context=".viewcontrollers.activities.LoginActivity"
+    android:theme="@style/AppTheme.NoActionBar">
 
-<android.support.design.widget.AppBarLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:theme="@style/AppTheme.AppBarOverlay">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        app:title="Mock Text Example Rats"
-        app:titleTextColor="@color/colorPrimaryText"
-        android:theme="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-        app:logo="@drawable/my_logo"/>
 
-</android.support.design.widget.AppBarLayout>
+    <include layout="@layout/content_login" />
+
 </android.support.design.widget.CoordinatorLayout>
