--- a/app/src/main/res/layout/content_add_publication.xml
+++ b/app/src/main/res/layout/content_add_publication.xml
@@ -11,9 +11,32 @@
     tools:showIn="@layout/activity_add_publication">
 
     <EditText
-        android:id="@+id/description"
+        android:id="@+id/titleEditView"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorCards"
+        android:drawableLeft="@drawable/ic_title_black_24dp"
+        android:ems="10"
+        android:hint="Insert a title "
+        android:inputType="textPersonName"
+        android:padding="4dp"
+        android:text="Title"
+        android:textColorHint="@color/colorDisabledText"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/descriptionEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -34,64 +57,58 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/titleEditView" />
 
-    <EditText
-        android:id="@+id/titleTextView"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
+    <android.support.design.button.MaterialButton
+        android:id="@+id/chooseImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorCards"
-        android:drawableLeft="@drawable/ic_title_black_24dp"
-        android:ems="10"
-        android:hint="Insert a title "
-        android:inputType="textPersonName"
-        android:padding="4dp"
-        android:text="Title"
-        android:textColorHint="@color/colorDisabledText"
-        app:layout_constraintBottom_toTopOf="@+id/description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:text="Choose an image here..."
+        android:drawableLeft="@drawable/ic_image_black_24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />
 
-    <EditText
-        android:id="@+id/editText4"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
+    <ImageView
+        android:id="@+id/loadFromGalleryButton"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:layout_margin="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:src="@drawable/ic_image_black_24dp"
         android:background="@color/colorCards"
-        android:drawableLeft="@drawable/ic_image_white_24dp"
-        android:ems="10"
-        android:hint="Insert an image Url"
-        android:inputType="textUri|textPersonName"
-        android:padding="4dp"
-        android:text="Name"
-        android:textAlignment="viewStart"
-        android:textColor="@color/colorPrimaryText"
-        android:textColorHint="@color/colorDisabledText"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description"
-        tools:text="ImageUrl" />
+        app:layout_constraintTop_toBottomOf="@id/chooseImage"
+        android:visibility="gone"
+        android:scaleType="fitXY"/>
 
     <Button
         android:id="@+id/addPublicationButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:background="@color/colorAccent"
         android:elevation="4dp"
-        android:text="Add Publication"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="POST IMAGE 1"
+        app:layout_constraintEnd_toStartOf="@+id/postPublication"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@id/loadFromGalleryButton" />
+
+    <Button
+        android:id="@+id/postPublication"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorAccent"
+        android:elevation="4dp"
+        android:text="Post publication for real 2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/addPublicationButton"
+        app:layout_constraintTop_toBottomOf="@+id/chooseImage" />
 
 </android.support.constraint.ConstraintLayout>
