--- a/app/src/main/res/layout/content_add_publication.xml
+++ b/app/src/main/res/layout/content_add_publication.xml
@@ -81,6 +81,7 @@
         android:drawableLeft="@drawable/ic_image_black_24dp"
         android:text="Take a photo"
         android:textAlignment="center"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/chooseImage"
         app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />
