onboarding render fixed

--- a/app/src/main/res/layout/item_publication.xml
+++ b/app/src/main/res/layout/item_publication.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
+    android:layout_marginBottom="0dp"
     android:layout_marginEnd="16dp"
     android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
-    android:elevation="32dp"
+    android:elevation="16dp"
     android:theme="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-    app:cardBackgroundColor="@color/colorAccent"
+    app:cardBackgroundColor="@color/colorCards"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
+    app:cardElevation="16dp"
 
     >
 
@@ -27,7 +27,7 @@
             android:id="@+id/avatarImagePublication"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:background="@color/colorCards"
             android:elevation="3dp"
@@ -40,43 +40,40 @@
 
         <TextView
             android:id="@+id/titleTextViewPublication"
-            android:layout_width="0dp"
+            android:layout_width="171dp"
             android:layout_height="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="8dp"
             android:background="@color/colorCards"
             android:text="Mock Title text"
             android:textColor="@color/colorPrimaryText"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/avatarImagePublication"
             app:layout_constraintTop_toTopOf="@+id/avatarImagePublication" />
 
         <TextView
             android:id="@+id/usernameTextViewPublication"
-            android:layout_width="0dp"
+            android:layout_width="171dp"
             android:layout_height="16dp"
             android:layout_marginBottom="4dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="8dp"
             android:background="@color/colorCards"
             android:text="Username Mock text"
             android:textColor="@color/colorDisabledText"
             app:layout_constraintBottom_toBottomOf="@id/avatarImagePublication"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/avatarImagePublication"
             app:layout_constraintTop_toBottomOf="@+id/titleTextViewPublication" />
 
         <com.androidnetworking.widget.ANImageView
             android:id="@+id/descriptionImageViewPublication"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="8dp"
+            android:layout_height="150dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
             android:background="@color/colorCards"
-            android:elevation="8dp"
-            android:scaleType="centerCrop"
+            android:elevation="0dp"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_round_perm_identity_24px"
             app:layout_constraintBottom_toTopOf="@id/descriptionTextViewPublication"
-            app:layout_constraintDimensionRatio="H,16:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/avatarImagePublication" />
@@ -85,10 +82,10 @@
             android:id="@+id/descriptionTextViewPublication"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@color/colorCards"
             android:lineSpacingExtra="8dp"
             android:textColor="@color/colorPrimaryText"
