--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/gameLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
-    android:elevation="4dp">
+    android:elevation="32dp"
+    android:layout_margin="8dp"
+    app:layout_goneMarginTop="8dp">
 
     <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -15,25 +16,13 @@
         <com.androidnetworking.widget.ANImageView
             android:id="@+id/pictureImageView"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
+            android:layout_height="175dp"
+            android:scaleType="fitXY"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <!--<android.support.v7.widget.AppCompatRatingBar-->
-        <!--android:id="@+id/gameRatingBar"-->
-        <!--style="?android:attr/ratingBarStyleSmall"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:layout_marginBottom="4dp"-->
-        <!--android:layout_marginStart="16dp"-->
-        <!--android:numStars="5"-->
-        <!--android:stepSize=".5"-->
-        <!--app:layout_constraintBottom_toBottomOf="@id/pictureImageView"-->
-        <!--app:layout_constraintStart_toStartOf="parent" />-->
 
     </android.support.constraint.ConstraintLayout>
 
