Last commit until back-end gets ready ... working in another repository for the moment...

--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -15,7 +15,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:theme="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:logo="@drawable/my_logo"
