--- a/app/src/main/res/layout/activity_add_publication.xml
+++ b/app/src/main/res/layout/activity_add_publication.xml
@@ -14,7 +14,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="New post"
             app:titleTextColor="@color/colorPrimaryText"
