--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -17,6 +17,7 @@
             android:id="@+id/pictureImageView"
             android:layout_width="0dp"
             android:layout_height="175dp"
+            android:background="@drawable/circle_outline"
             android:scaleType="fitXY"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintBottom_toBottomOf="parent"
